chapter 3 keep going~

--- a/3/3-10.md
+++ b/3/3-10.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 #include <string>
 
@@ -9,7 +10,7 @@ using std::string;
 
 int main()
 {
-    const string s1("this!!!!!!is!!!!!!!!!! a!!!!!!!!!!! test");
+    string s1("this!!!!!!is!!!!!!!!!! a!!!!!!!!!!! test");
     decltype(s1.size()) index = 0;
     for (auto &c : s1){
         if (ispunct(c)){
@@ -21,3 +22,5 @@ int main()
 
     return 0;
 }
+```
+
