--- a/3/3-6.md
+++ b/3/3-6.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 #include <string>
 
@@ -9,15 +10,15 @@ using std::string;
 
 int main()
 {
-    const string s1("this!!!!!!is!!!!!!!!!! a!!!!!!!!!!! test");
-    decltype(s1.size()) index = 0;
-    for (auto &c : s1){
-        if (ispunct(c)){
-            c = ' ';
-        }
+    string s1("this IS a Test");
+
+    for(auto &a : s1){
+        a = 'x';
     }
 
     cout << s1 << endl;
 
     return 0;
 }
+```
+
