chapter 3 keep going~~~

--- a/3/3-36.md
+++ b/3/3-36.md
@@ -1,5 +1,6 @@
+```c++
 /*
- * 利用指针将数组中的元素重置为0
+ * 比较两数组是否相等
  */
 #include <iostream>
 #include <cstddef>
@@ -38,3 +39,5 @@ int main()
     else
         cout << "The two vector are not equal" << endl;
 }
+```
+
