--- a/4/4-10.md
+++ b/4/4-10.md
@@ -1,11 +1,14 @@
+```c++
 #include <iostream>
 
 using std::cin; using std::cout; using std::endl; using std::cerr;
 
 int main()
 {
-    int a, b, c, d;
-    if (a > b && b > c && c >> d){
+    int x;
+    while(cin >> x && x != 42){
         //pass
     }
 }
+```
+
