5th, keep going~

--- a/5/5-11.md
+++ b/5/5-11.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 #include <string>
 
@@ -7,10 +8,7 @@ using std::string;
 int main(){
     unsigned aCount = 0, eCount = 0, iCount = 0,
              oCount = 0, uCount = 0, blankCount = 0,
-             zbfCount = 0, hhfCount = 0, ffCount = 0,
-             flCount = 0, fiCount = 0;
-
-    bool f_flag = false;
+             zbfCount = 0, hhfCount = 0;
 
     cout << "Please type the text: ";
 
@@ -24,14 +22,7 @@ int main(){
                 case 'e': case 'E':
                     ++eCount;
                 break;
-                case 'i':
-                    if (f_flag == true){
-                        ++fiCount;
-                        f_flag = false;
-                    }
-                    ++iCount;
-                break;
-                case 'I':
+                case 'i': case 'I':
                     ++iCount;
                 break;
                 case 'o': case 'O':
@@ -49,20 +40,6 @@ int main(){
                 case '\n':
                     ++hhfCount;
                 break;
-                case 'f':
-                    if (f_flag == false){
-                        f_flag = true;
-                    } else {
-                        ++ffCount;
-                        f_flag = false;
-                    }
-                break;
-                case 'l':
-                    if (f_flag == true){
-                        ++flCount;
-                        f_flag = false;
-                    }
-                break;
         }
     }
 
@@ -73,10 +50,9 @@ int main(){
             << "Number of vowel u: and U: \t" << uCount << '\n'
             << "Number of blank: \t" << blankCount << '\n'
             << "Number of 制表符: \t" << zbfCount << '\n'
-            << "Number of 换行符: \t" << hhfCount << '\n'
-            << "Number of ff: \t" << ffCount << '\n'
-            << "Number of fl: \t" << flCount << '\n'
-            << "Number of fi: \t" << fiCount << endl;
+            << "Number of 换行符: \t" << hhfCount << endl;
 
     return 0;
 }
+```
+
