--- a/7/7-41.md
+++ b/7/7-41.md
@@ -1,3 +1,4 @@
+```c++
 #ifndef UNTITLED1_SALES_DATA_H
 #define UNTITLED1_SALES_DATA_H
 
@@ -65,3 +66,22 @@ double Sales_data::avg_price() const {
         return 0;
 }
 #endif //UNTITLED1_SALES_DATA_H
+```
+
+```c++
+#include <iostream>
+#include <string>
+#include "Sales_data.h"
+
+using std::cin; using std::cout; using std::endl;
+using std::string;
+
+int main(){
+    string a = "Test";
+    Sales_data s1;
+    Sales_data s2(10.0);
+    Sales_data s3(a);
+    Sales_data s4(a, 10, 10.3);
+}
+```
+
