--- a/7/7-38.md
+++ b/7/7-38.md
@@ -1,3 +1,4 @@
+```c++
 #ifndef UNTITLED1_SALES_DATA_H
 #define UNTITLED1_SALES_DATA_H
 
@@ -12,16 +13,13 @@ class Sales_data {
     friend std::istream &read(std::istream &, Sales_data &);
     friend std::ostream &print(std::ostream &, const Sales_data &);
 public:
-    Sales_data(): Sales_data(" ", 0, 0){std::cout << "Delegating Constructor" << std::endl;}
-    Sales_data(double p):bookNo(" "), units_sold(0), revenue(0){std::cout << "Sales_data(double p):bookNo(\" \")" << std::endl;};
-    Sales_data(const std::string &s):bookNo(s){std::cout << "Sales_data(const std::string &s):" << std::endl;};
+    
+    Sales_data():bookNo(" "), units_sold(0), revenue(0){};
+    Sales_data(const std::string &s):bookNo(s){};
     Sales_data(const std::string &s, unsigned long n, double p):
-                bookNo(s), units_sold(n),revenue(p*n){std::cout << "Sales_data(const std::string &s, unsigned long n, double p):" << std::endl;};
+                bookNo(s), units_sold(n),revenue(p*n){};
     //提供cin作为接受istream&参数的构造函数的默认实参
-    Sales_data(std::istream &is) {
-        read(is, *this);
-        std::cout << "Sales_data(std::istream &is)" << std::endl;
-    }
+    Sales_data(std::istream &is = std::cin) {read(is, *this);}
     std::string isbn() const {
         return bookNo;
     }
@@ -65,3 +63,6 @@ double Sales_data::avg_price() const {
         return 0;
 }
 #endif //UNTITLED1_SALES_DATA_H
+
+```
+
