half of 9th chapter done, carry on~

--- a/9/9-31.md
+++ b/9/9-31.md
@@ -1,3 +1,10 @@
+删除一个元素后，对于list和forward_list，指向容器其他位置的迭代器、引用和指针仍然有效
+
+forward_list实现了自己的insert（insert_after）和erase（erase_after）
+
+所以对于vector的更新迭代器不再有效
+
+```c++
 #include <iostream>
 #include <list>
 #include <forward_list>
@@ -46,3 +53,5 @@ int main() {
     forward_list<int> fli = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9};
     work(fli);
 }
+```
+
