carry on, keep going~

--- a/9/9-45.md
+++ b/9/9-45.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl;
 #include <string>
@@ -5,11 +6,13 @@ using std::string;
 
 string addS(const string &name, const string &pf, const string &sf){
     string tmp(name.cbegin(), name.cend());
-    tmp.insert(0, pf);
-    tmp.insert(tmp.size(), sf);
+    tmp.insert(tmp.begin(), pf.cbegin(), pf.cend());
+    tmp.append(sf.cbegin(), sf.cend());
     return tmp;
 }
 
 int main() {
     cout << addS("Jack", "Mr.", "Jr.") << endl;
 }
+```
+
