11th chapter finished~

--- a/11/11-33.md
+++ b/11/11-33.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <fstream>
@@ -6,12 +7,13 @@ using std::ifstream;
 using std::istringstream;
 #include <string>
 using std::string;
-#include <unordered_map>
-using std::unordered_map;
+#include <map>
+using std::map;
 #include <stdexcept>
+
 using std::runtime_error;
 
-const string &transform(const string &s, const unordered_map<string, string> &m){
+const string &transform(const string &s, const map<string, string> &m){
     auto map_it = m.find(s);
     if (map_it != m.cend())
         return map_it->second;
@@ -19,8 +21,8 @@ const string &transform(const string &s, const unordered_map<string, string> &m)
         return s;
 }
 
-unordered_map<string, string>buildMap(ifstream &map_file){
-    unordered_map<string, string> trans_map;
+map<string, string>buildMap(ifstream &map_file){
+    map<string, string> trans_map;
     string key, value;
     while (map_file >> key && getline(map_file, value)){
         if (value.size() > 1)
@@ -59,3 +61,5 @@ int main() {
     else
         cerr << "Failed to open file" << endl;
 }
+```
+
