--- a/11/11-38.md
+++ b/11/11-38.md
@@ -1,3 +1,49 @@
+```c++
+//单词计数程序
+#include <iostream>
+using std::cin; using std::cout; using std::endl; using std::cerr;
+#include <fstream>
+using std::ifstream;
+#include <string>
+using std::string;
+#include <cctype>
+using std::tolower;
+#include <unordered_map>
+using std::unordered_map;
+
+//处理读入的string
+string process_str(string &s){
+    //将所有的大小字母转换为小写字母
+    for (auto &c : s)
+        c = tolower(c);
+    //搜索s中所有的标点符号并删除
+    string punctuation("\"'`:*-_;,.?!()[]{}");
+    while (s.find_first_of(punctuation) != string::npos){
+        s.erase(s.find_first_of(punctuation), 1);
+    }
+    return s;
+}
+
+int main() {
+    string pt("/home/raymain/CLionProjects/CPPLv1/test.txt");
+    ifstream input(pt);
+    if (input.is_open()){
+        unordered_map<string, size_t> word_count;     //string-size_t的k-v对
+        string tmp;
+        while (input >> tmp)
+            ++word_count[process_str(tmp)];
+        for (const auto &w : word_count)
+            cout << w.first << " occurs " << w.second
+                 << ((w.second > 1) ? " times" : " time") << endl;
+    } else {
+        cerr << "Failed to open file" << endl;
+        return EXIT_FAILURE;
+    }
+}
+```
+
+```c++
+//单词转换程序
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <fstream>
@@ -59,3 +105,5 @@ int main() {
     else
         cerr << "Failed to open file" << endl;
 }
+```
+
