--- a/12/12-14.md
+++ b/12/12-14.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <string>
@@ -16,10 +17,12 @@ void end_connection(connection *p){ disconnect(*p);}
 
 void f(destination &d /*其它参数*/){
     connection c = connect(&d);
-    shared_ptr<connection>p(&c, [](connection *p){disconnect(*p);});
+    shared_ptr<connection>p(&c, end_connection);
     //使用连接
     //当f退出时（即使是由于异常），connection会被正确关闭
 }
 
 int main() {
 }
+```
+
