12th chapter finished~

--- a/12/12-32.md
+++ b/12/12-32.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 using std::ostream;
@@ -20,8 +21,8 @@ using std::initializer_list;
 #include <stdexcept>
 using std::runtime_error; using std::out_of_range;
 
+using line_no = vector<string>::size_type;  //将行号定义为vector<string>的索引
 using size_type = vector<string>::size_type;
-using line_no = size_type;
 
 class StrBlobPtr;
 class StrBlob{
@@ -129,7 +130,6 @@ StrBlobPtr& StrBlobPtr::incr() {
     ++curr; //推进当前位置
     return *this;
 }
-
 class QueryResult;
 class TextQuery{
 public:
@@ -144,10 +144,7 @@ class QueryResult{
     friend ostream &print(ostream &, const QueryResult &);
 public:
     QueryResult(string s, shared_ptr<set<line_no>> p, shared_ptr<StrBlob> f):
-            sought(s), lines(p), file(f) {};
-    set<line_no>::iterator begin() { return lines->begin();}
-    set<line_no>::iterator end() { return lines->end();}
-    shared_ptr<StrBlob> get_file() { return file;}
+            sought(s), lines(p), file(f) {}
 private:
     string sought;    //要查询的单词
     shared_ptr<set<line_no>> lines; //单词出现的行号
@@ -225,3 +222,5 @@ int main() {
         return EXIT_FAILURE;
     }
 }
+```
+
