--- a/13/13-19.md
+++ b/13/13-19.md
@@ -1,3 +1,6 @@
+```c++
+//需要定义自己的拷贝控制成员（拷贝构造函数和拷贝赋值运算符）
+//因为需要保证每个雇员的id是唯一的
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <string>
@@ -30,3 +33,5 @@ Employee::operator=(const Employee &e) {
 }
 
 int main() {}
+```
+
