--- a/13/13-28.md
+++ b/13/13-28.md
@@ -1,3 +1,65 @@
+```c++
+//定义行为像值的版本
+#include <iostream>
+using std::cin; using std::cout; using std::endl; using std::cerr;
+#include <string>
+using std::string;
+
+class TreeNode {
+public:
+    TreeNode() : value(" "), count(0), left(nullptr), right(nullptr) {};
+    TreeNode(const string &s, const int &i, const TreeNode &t) :
+        value(s), count(i), left(new TreeNode(t)), right(new TreeNode(t)) {};
+    TreeNode(const TreeNode &t) :
+        value(t.value), count(t.count), left(new TreeNode(*t.left)), right(new TreeNode(*t.right)) {};
+    TreeNode &operator=(const TreeNode &);
+    ~TreeNode(){
+        delete left;
+        delete right;
+    }
+private:
+    string value;
+    int count;
+    TreeNode *left;
+    TreeNode *right;
+};
+
+TreeNode &
+TreeNode::operator=(const TreeNode &t){
+    auto newpl = new TreeNode(*t.left); //拷贝底层left
+    auto newpr = new TreeNode(*t.right); //拷贝底层right
+    delete left;    //释放旧内存
+    delete right;   //释放旧内存
+    left = newpl;   //从右侧运算对象拷贝数据到本对象
+    right = newpr;
+    value = t.value;
+    count = t.count;
+    return *this;
+}
+
+class BinStrTree {
+public:
+    BinStrTree(const TreeNode &t = TreeNode()) : root(new TreeNode(t)) {};
+    BinStrTree(const BinStrTree &b) : root(new TreeNode(*b.root)) {};
+    BinStrTree &operator=(const BinStrTree &);
+    ~BinStrTree() = default;
+private:
+    TreeNode *root;
+};
+
+BinStrTree &
+BinStrTree::operator=(const BinStrTree &b) {
+    auto newp = new TreeNode(*b.root);  //拷贝底层Treenode
+    delete root;    //释放旧内存
+    root = newp;
+    return *this;
+}
+
+int main() {}
+```
+
+```c++
+//定义行为像指针的版本
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <string>
@@ -73,3 +135,5 @@ BinStrTree::operator=(const BinStrTree &b){
 }
 
 int main() {}
+```
+
