--- a/13/R-13-43.md
+++ b/13/R-13-43.md
@@ -1,3 +1,4 @@
+```c++
 //ABI错误
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
@@ -60,7 +61,7 @@ void StrVec::free() {
     //不能传递给deallocate一个空指针，如果elements为空指针，函数什么也不做
     if (elements){
         //逆序销毁旧元素
-        for_each(elements, first_free,
+        for_each(elements, first_free, 
                 [](string &p){alloc.destroy(&p);});
         alloc.deallocate(elements, cap - elements);
     }
@@ -160,3 +161,6 @@ int main(){
     sv1.push_back("sv1");
     sv1.resize(10);
 }
+```
+
+更倾向于for循环实现，代码逻辑清晰易读
