--- a/13/13-42.md
+++ b/13/13-42.md
@@ -1,22 +1,37 @@
 ```c++
-//ABI错误
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
+using std::ostream;
+#include <fstream>
+using std::ifstream;
+#include <sstream>
+using std::istringstream;
 #include <string>
 using std::string;
+#include <vector>
+using std::vector;
+#include <map>
+using std::map;
+#include <set>
+using std::set;
 #include <memory>
+using std::shared_ptr; using std::make_shared; using std::weak_ptr;
 using std::allocator; using std::uninitialized_copy;
-#include <utility>
-using std::pair;
 #include <initializer_list>
 using std::initializer_list;
+#include <stdexcept>
+using std::runtime_error; using std::out_of_range;
+#include <utility>
+using std::pair;
+
+using line_no = vector<string>::size_type;  //将行号定义为vector<string>的索引
+using size_type = vector<string>::size_type;
 
 //类vector类内存分配策略的简化实现
 class StrVec {
 public:
     StrVec() :    //allocator成员进行默认初始化
-        elements(nullptr), first_free(nullptr), cap(nullptr) {};
-    StrVec(initializer_list<string> ils);
+            elements(nullptr), first_free(nullptr), cap(nullptr) {};
     StrVec(const StrVec &);             //拷贝构造函数
     StrVec &operator=(const StrVec &);  //拷贝赋值运算符
     ~StrVec();                          //析构函数
@@ -40,6 +55,8 @@ private:
     string *first_free;     //指向数组第一个空闲元素的指针
     string *cap;            //指向数组尾后位置的指针
 };
+
+allocator<string> StrVec::alloc;
 
 inline
 void StrVec::push_back(const string &s) {
@@ -157,16 +174,97 @@ void StrVec::resize(const size_t &n) {
     }
 }
 
-inline
-StrVec::StrVec(initializer_list<string> ils) : StrVec() {
-    //使用委托构造函数首先默认初始化对象再push_back
-    for (const auto &il : ils)
-        push_back(il);
+class QueryResult;
+class TextQuery{
+public:
+    explicit TextQuery(ifstream &);
+    QueryResult query(const string &) const ;
+private:
+    shared_ptr<StrVec> file;    //vector<string>保存整个输入文件的拷贝，每行为vector中的一个元素
+    map<string, shared_ptr<set<line_no>>> wm;   //将每个单词与其在输入文本的行号的set关联起来
+};
+
+class QueryResult{
+    friend ostream &print(ostream &, const QueryResult &);
+public:
+    QueryResult(string s, shared_ptr<set<line_no>> p, shared_ptr<StrVec> f):
+            sought(s), lines(p), file(f) {}
+private:
+    string sought;    //要查询的单词
+    shared_ptr<set<line_no>> lines; //单词出现的行号
+    shared_ptr<StrVec> file;    //输入文件
+};
+
+string make_plural(int cnt, const string &s, const string &pf){
+    return cnt > 1 ? s + pf : s;
 }
-int main(){
-    StrVec sv1;
-    sv1.push_back("sv1");
-    sv1.resize(10);
+
+//读取输入文件并建立单词到行号的映射
+TextQuery::TextQuery(ifstream &is) : file(new StrVec()) {
+    string text;
+    while (getline(is, text)){      //对文件中的每一行
+        file->push_back(text);      //保存此行文本
+        int n = file->size() - 1;   //当前行号
+        istringstream line(text);   //将行文本分解为单词
+        string word;
+        while (line >> word){       //对行中每个单词
+            //如果单词不在wm中，以之为下标在wm中添加一项
+            auto &lines = wm[word];     //lines是一个shared_ptr
+            if (!lines)                //在第一次遇到此单词时，此指针为空
+                lines.reset(new set<line_no>);  //分配一个新的set;
+            lines->insert(n);  //将此行号插入set中
+        }
+    }
+}
+
+QueryResult TextQuery::query(const string &sought) const {
+    //如果未找到sought，将返回一个指向此set的指针
+    static shared_ptr<set<line_no>> nodata(new set<line_no>);
+    //使用find而不是下标运算符来找单词，避免将单词添加到wm中
+    auto loc = wm.find(sought);
+    if (loc == wm.end())
+        return QueryResult(sought, nodata, file);   //未找到
+    else
+        return QueryResult(sought, loc->second, file);
+}
+
+void runQueries(ifstream &infile){
+    //infile是一个ifstream，指向我们要处理的文件
+    TextQuery tq(infile);   //保存文件并建立查询map
+    //与用户交互，提示用户输入要查询的单词，完成查询并打印结果
+    while (true){
+        cout << "Enter word to look for, or q to quit: ";
+        string s;
+        //若遇到文件尾或用户输入了'q'时循环终止
+        if (!(cin >> s) || s == "q") break;
+        //指向查询并打印结果
+        print(cout, tq.query(s)) << endl;
+    }
+}
+
+ostream &print(ostream &os, const QueryResult &qr){
+    //如果找到了单词，打印出现次数和所有出现的位置
+    os << qr.sought << " occurs " << qr.lines->size() << " "
+       << make_plural(qr.lines->size(), "time", "s") << endl;
+    //打印单词出现的每一行
+    for (auto num : *qr.lines){     //对set中的每个单词
+        //避免行号从0开始给用户困惑
+        os << "\t(lines " << num + 1 << ") " << endl;
+    }
+    return os;
+}
+
+int main() {
+    cout << "Please type the file name: ";
+    string pt;
+    cin >> pt;
+    ifstream input(pt);
+    if (input.is_open()){
+        runQueries(input);
+    } else {
+        cerr << "Failed to open file" << endl;
+        return EXIT_FAILURE;
+    }
 }
 ```
 
