13th chapter finished~

--- a/13/13-47.md
+++ b/13/13-47.md
@@ -71,6 +71,7 @@ String::String(const String &rhs) {
     auto newdata = alloc_n_copy(rhs.begin(), rhs.end());
     elements = newdata.first;
     first_free = cap = newdata.second;
+    cout << "String::String(const String &rhs)" << endl;
 }
 
 String::~String() { free();}
@@ -81,6 +82,7 @@ String::operator=(const String &rhs) {
     free();
     elements = data.first;
     first_free = cap = data.second;
+    cout << "String::operator=(const String &rhs)" << endl;
     return *this;
 }
 
