--- a/13/13-48.md
+++ b/13/13-48.md
@@ -3,6 +3,8 @@
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <string>
 using std::string;
+#include <vector>
+using std::vector;
 #include <memory>
 using std::allocator; using std::uninitialized_copy;
 #include <utility>
@@ -71,6 +73,7 @@ String::String(const String &rhs) {
     auto newdata = alloc_n_copy(rhs.begin(), rhs.end());
     elements = newdata.first;
     first_free = cap = newdata.second;
+    cout << "String::String(const String &rhs)" << endl;
 }
 
 String::~String() { free();}
@@ -81,6 +84,7 @@ String::operator=(const String &rhs) {
     free();
     elements = data.first;
     first_free = cap = data.second;
+    cout << "String::operator=(const String &rhs)" << endl;
     return *this;
 }
 
@@ -157,16 +161,10 @@ void String::resize(size_t n, const char &c) {
 }
 
 int main(){
+    vector<String> vS;
     String s;
-    for (int i = 0; i != 10; ++i)
-        s.push_back('a');
-    cout << s.size() << endl;
-    s.reserve(50);
-    cout << s.size() << endl;
-    s.resize(100, 'b');
-    cout << s.size() << endl;
-    s.resize(10);
-    cout << s.size() << endl;
+    for (int i = 0; i != 5; ++i)
+        vS.push_back(s);
 }
 ```
 
