--- a/13/13-50.md
+++ b/13/13-50.md
@@ -3,10 +3,12 @@
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <string>
 using std::string;
+#include <vector>
+using std::vector;
 #include <memory>
 using std::allocator; using std::uninitialized_copy;
 #include <utility>
-using std::pair;
+using std::pair; using std::make_move_iterator;
 #include <initializer_list>
 using std::initializer_list;
 
@@ -19,6 +21,8 @@ public:
     String(initializer_list<char>); //接受一个initializer_list<char>参数的构造函数
     String(const String &);     //拷贝构造函数
     String &operator=(const String &);  //拷贝赋值运算符
+    String(String &&) noexcept;          //移动构造函数
+    String &operator=(String &&) noexcept;       //移动赋值运算符
     ~String();                  //析构函数
     void push_back(const char &);   //拷贝元素
     size_t size() const { return first_free - elements;}
@@ -86,27 +90,27 @@ String::operator=(const String &rhs) {
 
 void String::reallocate(size_t n) {
     auto newcapacity = n;
-    auto newdata = alloc.allocate(newcapacity);
-    auto dest = newdata;
-    auto elem = elements;
-    for (size_t i = 0; i != size(); ++i)
-        alloc.construct(dest++, std::move(*elem++));
-    free();
-    elements = newdata;
-    first_free = dest;
+    auto first = alloc.allocate(newcapacity);
+    //移动元素
+    auto last = uninitialized_copy(make_move_iterator(begin()),
+                                   make_move_iterator(end()),
+                                   first);
+    free();     //释放旧空间
+    elements = first;   //更新指针
+    first_free = last;
     cap = elements + newcapacity;
 }
 
 void String::reallocate() {
     auto newcapacity = size() ? 2 * size() : 1;
-    auto newdata = alloc.allocate(newcapacity);
-    auto dest = newdata;
-    auto elem = elements;
-    for (size_t i = 0; i != size(); ++i)
-        alloc.construct(dest++, std::move(*elem++));
-    free();
-    elements = newdata;
-    first_free = dest;
+    auto first = alloc.allocate(newcapacity);
+    //移动元素
+    auto last = uninitialized_copy(make_move_iterator(begin()),
+                                   make_move_iterator(end()),
+                                   first);
+    free();     //释放旧空间
+    elements = first;   //更新指针
+    first_free = last;
     cap = elements + newcapacity;
 }
 
@@ -156,17 +160,33 @@ void String::resize(size_t n, const char &c) {
     }
 }
 
+String::String(String &&s) noexcept  //移动操作不应抛出任何异常
+//成员初始化器接管s中的资源
+        : elements(s.elements), first_free(s.first_free), cap(s.cap){
+    //令s进入这样的状态——对其运行析构函数是安全的
+    s.elements = s.first_free = s.cap = nullptr;
+    cout << "String::String(String &&s) noexcept" << endl;
+}
+
+String &
+String::operator=(String &&rhs) noexcept {
+    //直接检测自赋值
+    if (this != &rhs){
+        free();     //释放已有元素
+        elements = rhs.elements;    //从rhs接管资源
+        first_free = rhs.first_free;
+        cap = rhs.cap;
+        //将rhs置于可析构状态
+        rhs.elements = rhs.first_free = rhs.cap = nullptr;
+    }
+    cout << "String &String::operator=(String &&rhs) noexcept" << endl;
+    return *this;
+}
+
 int main(){
-    String s;
-    for (int i = 0; i != 10; ++i)
-        s.push_back('a');
-    cout << s.size() << endl;
-    s.reserve(50);
-    cout << s.size() << endl;
-    s.resize(100, 'b');
-    cout << s.size() << endl;
-    s.resize(10);
-    cout << s.size() << endl;
+    vector<String> vS;
+    for (int i = 0; i != 5; ++i)
+        vS.push_back(String());
 }
 ```
 
