14th chapter started

--- a/14/14-7.md
+++ b/14/14-7.md
@@ -1,6 +1,7 @@
-//String类
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
+using std::ostream;
 #include <string>
 using std::string;
 #include <memory>
@@ -12,10 +13,7 @@ using std::initializer_list;
 
 //类string类的实现，底层使用char
 class String{
-    friend bool operator==(const String &, const String &);
-    friend bool operator!=(const String &, const String &);
-    friend bool operator<(const String &, const String &);
-    friend bool operator>(const String &, const String &);
+    friend ostream &operator<<(ostream &, const String &);   //重载的输出运算符
 public:
     String() :  //默认构造函数，allocator成员进行默认初始化
             elements(nullptr), first_free(nullptr), cap(nullptr){};
@@ -35,7 +33,6 @@ public:
     void reserve(size_t);       //调整预留空间
     void resize(size_t);        //调整大小
     void resize(size_t, const char &);  //调整大小
-
 private:
     static allocator<char> alloc;   //分配元素
     //被添加元素的函数所使用
@@ -160,52 +157,17 @@ void String::resize(size_t n, const char &c) {
     }
 }
 
-bool operator==(const String &lhs, const String &rhs){
-    return lhs.elements == rhs.elements &&
-           lhs.first_free == rhs.first_free &&
-           lhs.cap == rhs.cap &&
-           lhs.size() == rhs.size();
-};
-
-bool operator!=(const String &lhs, const String &rhs){
-    return !(lhs == rhs);
-};
-
-bool operator<(const String &lhs, const String &rhs){
-    auto it_lhs = lhs.elements, it_rhs = rhs.elements;
-    for (;it_lhs != lhs.first_free && it_rhs != rhs.first_free;
-          ++it_lhs, ++it_rhs){
-        if (*it_lhs < *it_rhs){
-            return true;
-        } else {
-            return false;
-        }
-    }
-    return !(it_lhs == lhs.first_free && it_rhs == rhs.first_free);
-};
-
-bool operator>(const String &lhs, const String &rhs){
-    auto it_lhs = lhs.elements, it_rhs = rhs.elements;
-    for (;it_lhs != lhs.first_free && it_rhs != rhs.first_free;
-          ++it_lhs, ++it_rhs){
-        if (*it_lhs > *it_rhs){
-            return true;
-        } else {
-            return false;
-        }
-    }
-    return !(it_lhs == lhs.first_free && it_rhs == rhs.first_free);
-};
+ostream &operator<<(ostream &os, const String &rhs){
+    for (auto it = rhs.elements; it != rhs.first_free; ++it)
+        os << *it;
+    return os;
+}
 
 int main(){
     String s;
-    for (int i = 0; i != 10; ++i)
-        s.push_back('a');
-    cout << s.size() << endl;
-    s.reserve(50);
-    cout << s.size() << endl;
-    s.resize(100, 'b');
-    cout << s.size() << endl;
-    s.resize(10);
-    cout << s.size() << endl;
+    for (int i = 0; i != 5; ++i)
+        s.push_back('b');
+    cout << s;
 }
+```
+
