--- a/15/15-5.md
+++ b/15/15-5.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::cerr; using std::endl;
 using std::ostream;
@@ -50,30 +51,6 @@ double Bulk_quote::net_price(size_t cnt) const {
         return cnt * price;
 }
 
-class L_Bulk_quote : public Quote{
-public:
-    L_Bulk_quote() = default;
-    L_Bulk_quote(const string &book, double p, size_t qty, double disc) :
-        Quote(book, p), max_qty(qty), discount(disc) {};
-    double net_price(size_t) const override;
-private:
-    size_t max_qty = 0;
-    double discount = 0;
-};
+int main(){}
+```
 
-double L_Bulk_quote::net_price(size_t cnt) const {
-    if (cnt <= max_qty)
-        return cnt * (1 - discount) * price;
-    else
-        return (cnt - max_qty) * price + max_qty * (1 - discount) * price;
-}
-
-int main(){
-    Quote basic("978-7-121-15535-2", 128.00);
-    Bulk_quote bulk("978-7-121-15535-2", 128.00, 100, 0.3);
-    L_Bulk_quote l_bulk("978-7-121-15535-2", 128.00, 150, 0.3);
-
-    print_total(cout, basic, 20);
-    print_total(cout, bulk, 120);
-    print_total(cout, l_bulk, 200);
-}
