--- a/15/15-15.md
+++ b/15/15-15.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::cerr; using std::endl;
 using std::ostream;
@@ -60,25 +61,28 @@ public:
 
 //如果达到了购买书籍的某个最低限量值，就可以享受折扣价格了
 double Bulk_quote::net_price(size_t cnt) const {
-    if (cnt > quantity)
+    if (cnt > min_qty)
         return cnt * (1 - discount) * price;
     else
         return cnt * price;
 }
 
-class L_Bulk_quote : public Disc_quote{
+class L_Bulk_quote : public Quote{
 public:
     L_Bulk_quote() = default;
     L_Bulk_quote(const string &book, double p, size_t qty, double disc) :
-        Disc_quote(book, p, qty, disc) {};
+        Quote(book, p), max_qty(qty), discount(disc) {};
     double net_price(size_t) const override;
+private:
+    size_t max_qty = 0;
+    double discount = 0;
 };
 
 double L_Bulk_quote::net_price(size_t cnt) const {
-    if (cnt <= quantity)
+    if (cnt <= max_qty)
         return cnt * (1 - discount) * price;
     else
-        return (cnt - quantity) * price + quantity * (1 - discount) * price;
+        return (cnt - max_qty) * price + max_qty * (1 - discount) * price;
 }
 
 int main(){
@@ -90,3 +94,5 @@ int main(){
     print_total(cout, bulk, 120);
     print_total(cout, l_bulk, 200);
 }
+```
+
