--- a/15/15-11.md
+++ b/15/15-11.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::cerr; using std::endl;
 using std::ostream;
@@ -35,50 +36,42 @@ double print_total(ostream &os, const Quote &item, size_t n){
     return ret;
 }
 
-//用于保存折扣值和购买量的类，派生类使用这些数据可以实现不同的价格策略
-class Disc_quote : public Quote{
-public:
-    Disc_quote() = default;
-    Disc_quote(const string &book, double price, size_t qty, double disc) :
-        Quote(book, price), quantity(qty), discount(disc) {};
-    double net_price(size_t) const =0;
-protected:
-    size_t quantity = 0;    //折扣适用的购买量
-    double discount = 0.0;  //表示折扣的小数值
-};
-
-//当同一书籍的销售量超过某个值时启用折扣
-//折扣的值是一个小于1的正的小数值，以此来降低正常销售价格
-class Bulk_quote : public Disc_quote{    //Bulk_quote直接继承自Disc_quote，间接继承自Quote
+class Bulk_quote : public Quote{    //Bulk_quote继承自Quote
 public:
     Bulk_quote() = default;
     Bulk_quote(const string &book, double p, size_t qty, double disc) :
-        Disc_quote(book, p, qty, disc) {};
+        Quote(book, p), min_qty(qty), discount(disc) {};
     //覆盖基类的函数版本以实现基于大量购买的折扣政策
     double net_price(size_t) const override;
+private:
+    size_t min_qty = 0;     //适用折扣政策的最低购买量
+    double discount = 0.0;  //以小数表示的折扣额
 };
 
 //如果达到了购买书籍的某个最低限量值，就可以享受折扣价格了
 double Bulk_quote::net_price(size_t cnt) const {
-    if (cnt > quantity)
+    if (cnt > min_qty)
         return cnt * (1 - discount) * price;
     else
         return cnt * price;
 }
 
-class L_Bulk_quote : public Disc_quote{
+class L_Bulk_quote : public Quote{
 public:
     L_Bulk_quote() = default;
     L_Bulk_quote(const string &book, double p, size_t qty, double disc) :
-        Disc_quote(book, p, qty, disc) {};
+        Quote(book, p), max_qty(qty), discount(disc) {};
     double net_price(size_t) const override;
+private:
+    size_t max_qty = 0;
+    double discount = 0;
 };
 
 double L_Bulk_quote::net_price(size_t cnt) const {
-    if (cnt <= quantity)
+    if (cnt <= max_qty)
         return cnt * (1 - discount) * price;
     else
-        return (cnt - quantity) * price + quantity * (1 - discount) * price;
+        return (cnt - max_qty) * price + max_qty * (1 - discount) * price;
 }
 
 int main(){
@@ -90,3 +83,5 @@ int main(){
     print_total(cout, bulk, 120);
     print_total(cout, l_bulk, 200);
 }
+```
+
