--- a/15/15-23.md
+++ b/15/15-23.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::cerr; using std::endl;
 using std::ostream;
@@ -32,3 +33,8 @@ int main(){
     bp2->fcn();
     bp3->fcn();
 }
+```
+
+Base::fcn
+D1::fcn
+D2::fcn
