--- a/15/15-26.md
+++ b/15/15-26.md
@@ -1,16 +1,9 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::cerr; using std::endl;
 using std::ostream;
 #include <string>
 using std::string;
-#include <vector>
-using std::vector;
-#include <memory>
-using std::shared_ptr; using std::make_shared;
-#include <set>
-using std::multiset;
-#include <algorithm>
-using std::upper_bound;
 
 class Quote{
 public:
@@ -45,9 +38,6 @@ public:
         cout << "operator=(Quote &&rhs)" << endl;
         return *this;
     }   //移动赋值运算符
-    //该虚函数返回当前对象的一份动态分配的拷贝
-    virtual Quote *clone() const & { return new Quote(*this);}
-    virtual Quote *clone() && { return new Quote(std::move(*this));}
 private:
     string bookNo;      //书籍的ISBN编号
 protected:
@@ -102,11 +92,11 @@ protected:
 //折扣的值是一个小于1的正的小数值，以此来降低正常销售价格
 class Bulk_quote : public Disc_quote{    //Bulk_quote直接继承自Disc_quote，间接继承自Quote
 public:
-    using Disc_quote::Disc_quote;
+    Bulk_quote() = default;
+    Bulk_quote(const string &book, double p, size_t qty, double disc) :
+            Disc_quote(book, p, qty, disc) {};
     //覆盖基类的函数版本以实现基于大量购买的折扣政策
     double net_price(size_t) const override;
-    Bulk_quote *clone() const & override { return new Bulk_quote(*this);}
-    Bulk_quote *clone() && override { return new Bulk_quote(std::move(*this));}
 };
 
 //如果达到了购买书籍的某个最低限量值，就可以享受折扣价格了
@@ -132,51 +122,22 @@ double L_Bulk_quote::net_price(size_t cnt) const {
         return (cnt - quantity) * price + quantity * (1 - discount) * price;
 }
 
-class Basket{
-public:
-    //Basket使用合成的默认构造函数和拷贝控制成员
-    void add_item(const Quote & sale){  //拷贝给定的对象
-        items.insert(shared_ptr<Quote>(sale.clone()));
-    }
-    void add_item(Quote && sale){   //移动给定的对象
-        items.insert(shared_ptr<Quote>(std::move(sale).clone()));
-    }
-    //打印每本书的总价和购物篮中所有书的总价
-    double total_receipt(ostream &) const;
-private:
-    //该函数用于比较shared_ptr， multiset成员将会用到
-    static bool compare(const shared_ptr<Quote> &lhs, const shared_ptr<Quote> &rhs){
-        return lhs->isbn() < rhs->isbn();
-    }
-    //multiset保存多个报价，按照compare成员排序
-    multiset<shared_ptr<Quote>, decltype(compare)*> items {compare};
-};
-
-double Basket::total_receipt(ostream &os) const {
-    double sum = 0.0;   //保存实时计算出的总价
-    //iter指向ISBN相同的一批元素中的第一个
-    //upper_bound返回一个迭代器，该迭代器指向这批（相同）元素的尾后位置
-    for (auto iter = items.cbegin(); iter != items.cend(); iter = items.upper_bound(*iter)){
-        //在当前Basket中至少有一个该关键字的元素
-        //打印该书籍对应的项目
-        sum += print_total(os, **iter, items.count(*iter));
-    }
-    os << "Total Sale: " << sum << endl;
-    return sum;
-}
-
 int main(){
     Quote basic("978-7-121-15535-2", 128.00);
     Bulk_quote bulk("978-7-121-15535-2", 128.00, 100, 0.3);
     L_Bulk_quote l_bulk("978-7-121-15535-2", 128.00, 150, 0.3);
 
-    Basket basket;
-    for (int i = 0; i != 32; ++i)
-        basket.add_item(Quote("978-7-121-15535-2", 128.00));
-    for (int j = 0; j != 64; ++j)
-        basket.add_item(std::move(Bulk_quote("978-7-121-15535-3", 128.00, 100, 0.3)));
-    for (int k = 0; k != 128; ++k)
-        basket.add_item(L_Bulk_quote("978-7-121-15535-4", 128.00, 150, 0.3));
+    print_total(cout, basic, 20);
+    print_total(cout, bulk, 120);
+    print_total(cout, l_bulk, 200);
 
-    basket.total_receipt(cout);
+    Quote basic_v1(basic);
+    Quote basic_v2 = basic_v1;
+    Quote basic_v3(std::move(basic_v2));
+
+    L_Bulk_quote l_bulk_v1(l_bulk);
+    L_Bulk_quote l_bulk_v2 = l_bulk_v1;
+    L_Bulk_quote l_bulk_v3(std::move(l_bulk_v2));
 }
+```
+
