--- a/15/15-35.md
+++ b/15/15-35.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 using std::ostream;
@@ -105,8 +106,6 @@ ostream &print(ostream &os, const QueryResult &qr){
 //这是一个抽象基类，具体的查询类型从中派生，所有成员都是private的
 class Query_base{
     friend class Query;
-    friend class NotQuery;
-    friend class BinaryQuery;
 protected:
     using line_no = TextQuery::line_no ;    //用于eval函数
     virtual ~Query_base() = default;
@@ -127,7 +126,7 @@ public:
     Query(const string &);  //构建一个新的WordQuery
     //接口函数：调用对应的Query_base操作
     QueryResult eval(const TextQuery &t) const { return q->eval(t);}
-    string rep() const { cout << "Query::rep" << endl; return q->rep();}
+    string rep() const { return q->rep();}
 private:
     Query(shared_ptr<Query_base> query) : q(query) {}
     shared_ptr<Query_base> q;
@@ -142,69 +141,61 @@ ostream &operator<<(ostream &os, const Query &query){
 
 class WordQuery : public Query_base{
     friend class Query;     //Query使用WordQuery的构造函数
-    WordQuery(const string &s) : query_word(s) {cout << "WordQuery::WordQuery(const string &)" << endl;}
+    WordQuery(const string &s) : query_word(s) {}
     //具体的类：WordQuery将定义所有继承而来的纯虚函数
     QueryResult eval(const TextQuery &t) const { return t.query(query_word);}
-    string rep() const { cout << "WordQuery::rep" << endl; return query_word;}
+    string rep() const { return query_word;}
     string query_word;      //要查找的单词
 };
 
 inline
-Query::Query(const string &s) : q(new WordQuery(s)) { cout << "Query::Query(const string &)" << endl;}
+Query::Query(const string &s) : q(new WordQuery(s)) {}
 
 class NotQuery : public Query_base{
     friend Query operator~(const Query &);
-    NotQuery(shared_ptr<Query_base> q) : query(q) {cout << "NotQuery::NotQuery(const string &)" << endl;};
+    NotQuery(const Query &q) : query(q) {};
     //具体的类：NotQuery将定义所有继承而来的纯虚函数
-    string rep() const {cout << "NotQuery::rep" << endl; return "~(" + query->rep() + ")";}
+    string rep() const { return "~(" + query.rep() + ")";}
     QueryResult eval(const TextQuery &) const ;
-    shared_ptr<Query_base> query;
+    Query query;
 };
 
 inline
 Query operator~(const Query &operand){
-    return shared_ptr<Query_base>(new NotQuery(operand.q));
+    return shared_ptr<Query_base>(new NotQuery(operand));
 }
 
 class BinaryQuery : public Query_base{
 protected:
-    BinaryQuery(shared_ptr<Query_base> l, shared_ptr<Query_base> r, const string &s) : lhs(l), rhs(r), opSym(s) {
-        cout << "BinaryQuery::BinaryQuery(const Query &, const Query &, const string &)" << endl;
-    };
+    BinaryQuery(const Query &l, const Query &r, const string &s) : lhs(l), rhs(r), opSym(s) {};
     //抽象类：BinaryQuery不定义eval
-    string rep() const {
-        cout << "BinaryQuery::rep" << endl;
-        return "(" + lhs->rep() + " " + opSym + " " + rhs->rep() + ")";}
-    shared_ptr<Query_base> lhs, rhs;     //左侧和右侧运算对象
+    string rep() const { return "(" + lhs.rep() + " " + opSym + " " + rhs.rep() + ")";}
+    Query lhs, rhs;     //左侧和右侧运算对象
     string opSym;       //运算符的名字
 };
 
 class AndQuery : public BinaryQuery{
     friend Query operator&(const Query &, const Query &);
-    AndQuery(shared_ptr<Query_base> left, shared_ptr<Query_base> right) : BinaryQuery(left, right, "&") {
-        cout << "AndQuery::AndQuery(const Query &, const Query &)" << endl;
-    };
+    AndQuery(const Query &left, const Query &right) : BinaryQuery(left, right, "&") {};
     //具体的类：AndQuery继承了rep并且定义了其它纯虚函数
     QueryResult eval(const TextQuery &) const;
 };
 
 inline
 Query operator&(const Query &lhs, const Query &rhs){
-    return shared_ptr<Query_base>(new AndQuery(lhs.q, rhs.q));
+    return shared_ptr<Query_base>(new AndQuery(lhs, rhs));
 }
 
 class OrQuery : public BinaryQuery{
     friend Query operator|(const Query &, const Query &);
-    OrQuery(shared_ptr<Query_base> left, shared_ptr<Query_base> right) : BinaryQuery(left, right, "|") {
-        cout << "OrQuery::OrQuery(const Query &, const Query &)" << endl;
-    };
+    OrQuery(const Query &left, const Query &right) : BinaryQuery(left, right, "|") {};
     //具体的类：AndQuery继承了rep并且定义了其它纯虚函数
     QueryResult eval(const TextQuery &) const;
 };
 
 inline
 Query operator|(const Query &lhs, const Query &rhs){
-    return shared_ptr<Query_base>(new OrQuery(lhs.q, rhs.q));
+    return shared_ptr<Query_base>(new OrQuery(lhs, rhs));
 }
 
 
@@ -221,3 +212,5 @@ int main() {
         return EXIT_FAILURE;
     }
 }
+```
+
