15th chapter finished~

--- a/15/15-39.md
+++ b/15/15-39.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 using std::ostream;
@@ -131,9 +132,8 @@ public:
     QueryResult eval(const TextQuery &t) const { return q->eval(t);}
     string rep() const { cout << "Query::rep" << endl; return q->rep();}
 private:
-    Query(Query_base *&&query) : q(query) {}
-    Query_base *q;
-    size_t *cnt;
+    Query(shared_ptr<Query_base> query) : q(query) {}
+    shared_ptr<Query_base> q;
 };
 
 inline
@@ -273,3 +273,5 @@ int main() {
         return EXIT_FAILURE;
     }
 }
+```
+
