--- a/16/16-12.md
+++ b/16/16-12.md
@@ -277,7 +277,7 @@ BlobPtr<T> BlobPtr<T>::operator+(int n) const {
 
 template <typename T>
 BlobPtr<T> BlobPtr<T>::operator-(int n) const {
-    StrBlobPtr ret = *this;
+    BlobPtr<T> ret = *this;
     return ret -= n;
 }
 
