16th chapter finished~

--- a/16/16-56.md
+++ b/16/16-56.md
@@ -1,5 +1,7 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
+using std::ostream;
 #include <string>
 using std::string;
 #include <sstream>
@@ -7,12 +9,13 @@ using std::ostringstream;
 
 //在定义任何函数之前，先声明所有重载的函数版本
 //这样做可避免编译器由于未遇到希望调用的函数而实例化一个并非所需的版本
+template <typename T> string debug_rep(const T &t);
 template <typename T> string debug_rep(T *p);
 
 //为了使debug_rep(char *)正确工作，下面的声明必须在作用域中
 string debug_rep(const string &);
-template <> string debug_rep(const char *p);
-template <> string debug_rep(char *p);
+string debug_rep(char *p);
+string debug_rep(const char *p);
 
 //打印任何我们不能处理的类型
 template <typename T>
@@ -40,14 +43,38 @@ string debug_rep(const string &s){
     return '"' + s + '"';
 }
 
-template <>
-string debug_rep(const char *p){
-    return debug_rep(string(p));
-}
-
-template <>
 string debug_rep(char *p){
     return debug_rep(string(p));
 }
 
+string debug_rep(const char *p){
+    return debug_rep(string(p));
+}
+
+//用来终止递归并打印最后一个元素的函数
+//此函数必须在可变参数版本的print定义之前声明
+template <typename T>
+ostream &print(ostream &os, const T &t){
+    return os << t; //包中最后一个元素之后不打印分隔符
+}
+
+template <typename T, typename ... Args>
+ostream &
+print(ostream &os, const T &t, const Args & ... rest){  //包扩展Args
+    os << t << ", ";
+    return print(os, rest ...);     //包扩展rest
+}
+
+
+//在print调用中对每个实参调用debug_rep
+template <typename ... Args>
+ostream &errorMsg(ostream &os, const Args & ... rest){
+    //print(os, debug_rep(a1), debug_rep(a2), ... , debug_rep(an))
+    return print(os, debug_rep(rest) ...);
+}
+
+
+
 int main() {}
+```
+
