--- a/17/W-17-18.md
+++ b/17/W-17-18.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <string>
@@ -40,3 +41,6 @@ int main() {
         cout << e.what() << "\ncode: " << e.code() << endl;
     }
 }
+```
+
+题意不明，略过
