--- a/17/17-20.md
+++ b/17/17-20.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <string>
@@ -7,32 +8,38 @@ using std::regex; using std::regex_search; using std::smatch;
 using std::sregex_iterator;
 
 bool valid(const smatch &m){
-    return m[0].matched || m[1].matched || m[2].matched;
+    //如果区号前有一个左括号
+    if(m[1].matched){
+        //则区号后必须有一个右括号，之后紧跟剩余号码或一个空格
+        return m[3].matched && (m[4].matched == 0 || m[4].str() == " ");
+    } else {
+        //否则，区号后不能有右括号
+        //另两个组成部分间的分隔符必须匹配
+        return !m[3].matched && m[4].str() == m[6].str();
+    }
 }
 
 int main() {
     try {
         string phone =
-                "((\\d{5})(\\d{4}))";
+                "(\\\\()?(\\\\d{3})(\\\\))?([-. ])?(\\\\d{3})([-. ]?)(\\\\d{4})";
         regex r(phone);                     //regex对象，用于查找我们的模式
         smatch m;
         string s;
-        string fmt = "$2-$3";
-        cout << "Please type the zipcode: \n";
         //从输入文件中读取每条记录
         while (getline(cin, s)){
             //对每个匹配的电话号码
             for (sregex_iterator it(s.begin(), s.end(), r), end_it; it != end_it; ++it){
                 //检查号码的格式是否合法
-                if (valid(*it)) {
+                if (valid(*it))
                     cout << "valid: " << it->str() << endl;
-                    cout << "Transfer: " << it->format(fmt) << endl;
-                }   else {
+                else
                     cout << "not valid: " << it->str() << endl;
-                }
             }
         }
     } catch (std::regex_error e){
         cout << e.what() << "\ncode: " << e.code() << endl;
     }
 }
+```
+
