--- a/17/17-23.md
+++ b/17/17-23.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 #include <string>
@@ -7,32 +8,37 @@ using std::regex; using std::regex_search; using std::smatch;
 using std::sregex_iterator;
 
 bool valid(const smatch &m){
-    return m[0].matched || m[1].matched || m[2].matched;
+    if (m[0].matched){  //如果整个模式都匹配
+        return 1;
+    } else if (m[1].matched){   //如果前5位数字匹配
+        return !(m[2].matched && m[3].matched); //则不应出现-以及后面的数字
+    } else {
+        return 0;
+    }
 }
 
 int main() {
     try {
         string phone =
-                "((\\d{5})(\\d{4}))";
+                "((\\d{5})([-])?(\\d{4})?)";
         regex r(phone);                     //regex对象，用于查找我们的模式
         smatch m;
         string s;
-        string fmt = "$2-$3";
         cout << "Please type the zipcode: \n";
         //从输入文件中读取每条记录
         while (getline(cin, s)){
             //对每个匹配的电话号码
             for (sregex_iterator it(s.begin(), s.end(), r), end_it; it != end_it; ++it){
                 //检查号码的格式是否合法
-                if (valid(*it)) {
+                if (valid(*it))
                     cout << "valid: " << it->str() << endl;
-                    cout << "Transfer: " << it->format(fmt) << endl;
-                }   else {
+                else
                     cout << "not valid: " << it->str() << endl;
-                }
             }
         }
     } catch (std::regex_error e){
         cout << e.what() << "\ncode: " << e.code() << endl;
     }
 }
+```
+
