18th chapter started~

--- a/18/18-9.md
+++ b/18/18-9.md
@@ -1,3 +1,4 @@
+```c++
 #include <iostream>
 using std::cin; using std::cout; using std::endl; using std::cerr;
 using std::istream; using std::ostream;
@@ -113,9 +114,6 @@ Sales_data operator+(const Sales_data &lhs, const Sales_data &rhs) {
     return sum;
 }
 
-int main() {
-    Sales_data s1("0-201-70353-X", 4, 24.99);
-    Sales_data s2("0-201-82470-1", 4, 45.39);
+int main() {}
+```
 
-    s1 += s2;
-}
